accelerated-domains: add zj-zyhb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102349,6 +102349,7 @@ server=/zj-nuolong.com/114.114.114.114
 server=/zj-tiansong.com/114.114.114.114
 server=/zj-tuna.com/114.114.114.114
 server=/zj-yinlong.com/114.114.114.114
+server=/zj-zyhb.com/114.114.114.114
 server=/zj.com/114.114.114.114
 server=/zj01.com/114.114.114.114
 server=/zj1058.com/114.114.114.114
