accelerated-domains: add zjeagles.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102415,6 +102415,7 @@ server=/zjdydlc.com/114.114.114.114
 server=/zjdyjob.com/114.114.114.114
 server=/zjdzqt.com/114.114.114.114
 server=/zje.com/114.114.114.114
+server=/zjeagles.com/114.114.114.114
 server=/zjedps.com/114.114.114.114
 server=/zjedu.org/114.114.114.114
 server=/zjevt.com/114.114.114.114
