--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102684,6 +102684,7 @@ server=/zjxtxs.com/114.114.114.114
 server=/zjxwjs.com/114.114.114.114
 server=/zjxwtoy.com/114.114.114.114
 server=/zjxxkx.com/114.114.114.114
+server=/zjxymy.com/114.114.114.114
 server=/zjyanxing.com/114.114.114.114
 server=/zjyari.com/114.114.114.114
 server=/zjycpx.com/114.114.114.114
