accelerated-domains: add znshuke.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102979,6 +102979,7 @@ server=/znpin.com/114.114.114.114
 server=/znrfwy.com/114.114.114.114
 server=/znrom.com/114.114.114.114
 server=/znrsc.com/114.114.114.114
+server=/znshuke.com/114.114.114.114
 server=/znshuru.com/114.114.114.114
 server=/znsjw.com/114.114.114.114
 server=/znsmart.com/114.114.114.114
