accelerated-domains: add zjqsysj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102582,6 +102582,7 @@ server=/zjqingshan.com/114.114.114.114
 server=/zjqinzijianding.com/114.114.114.114
 server=/zjqjs.com/114.114.114.114
 server=/zjqqmy.com/114.114.114.114
+server=/zjqsysj.com/114.114.114.114
 server=/zjqzsy.com/114.114.114.114
 server=/zjradiology.org/114.114.114.114
 server=/zjrc.com/114.114.114.114
