accelerated-domains: add sunseekerpower.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79503,6 +79503,7 @@ server=/sunresin.net/114.114.114.114
 server=/sunrisedutyfree.com/114.114.114.114
 server=/sunrisenan.com/114.114.114.114
 server=/sunrizetech.com/114.114.114.114
+server=/sunseekerpower.com/114.114.114.114
 server=/sunsetcare-mirrortech.com/114.114.114.114
 server=/sunsharer.com/114.114.114.114
 server=/sunshine-power.net/114.114.114.114
