accelerated-domains: add hujianggroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44500,6 +44500,7 @@ server=/huizuoyuezi.com/114.114.114.114
 server=/huizustore.com/114.114.114.114
 server=/hujia.org/114.114.114.114
 server=/hujiang.com/114.114.114.114
+server=/hujianggroup.com/114.114.114.114
 server=/hujibbs.com/114.114.114.114
 server=/hujingnb.com/114.114.114.114
 server=/hujinjj.com/114.114.114.114
