--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28848,6 +28848,7 @@ server=/eayh.com/114.114.114.114
 server=/eayou.com/114.114.114.114
 server=/eayuan.com/114.114.114.114
 server=/eayyou.com/114.114.114.114
+server=/eazypharm.com/114.114.114.114
 server=/eazytec-cloud.com/114.114.114.114
 server=/eb-ind.com/114.114.114.114
 server=/eb80.com/114.114.114.114
