--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83630,6 +83630,7 @@ server=/tranplanet.com/114.114.114.114
 server=/trans4e.com/114.114.114.114
 server=/transduck.com/114.114.114.114
 server=/transer-cn.com/114.114.114.114
+server=/transfarchem.com/114.114.114.114
 server=/transformer-cn.com/114.114.114.114
 server=/transformers.run/114.114.114.114
 server=/transfriend.com/114.114.114.114
