accelerated-domains: add virtupharmako.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86310,6 +86310,7 @@ server=/virosin.org/114.114.114.114
 server=/virscan.org/114.114.114.114
 server=/virtaicloud.com/114.114.114.114
 server=/virtualevent.net/114.114.114.114
+server=/virtupharmako.com/114.114.114.114
 server=/virusdefender.net/114.114.114.114
 server=/vis.zone/114.114.114.114
 server=/visa027.com/114.114.114.114
