--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102897,6 +102897,7 @@ server=/zmdxy.com/114.114.114.114
 server=/zmdyzkgjt.com/114.114.114.114
 server=/zmdyzyey.com/114.114.114.114
 server=/zmdz.com/114.114.114.114
+server=/zmeetb.com/114.114.114.114
 server=/zmeng.cc/114.114.114.114
 server=/zmeng123.com/114.114.114.114
 server=/zmengzhu.com/114.114.114.114
