accelerated-domains: add te-silicone.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81624,6 +81624,7 @@ server=/tdyxmoto.com/114.114.114.114
 server=/tdzntech.com/114.114.114.114
 server=/tdzyw.com/114.114.114.114
 server=/te-ch.tech/114.114.114.114
+server=/te-silicone.com/114.114.114.114
 server=/te160.com/114.114.114.114
 server=/te5.com/114.114.114.114
 server=/te6.com/114.114.114.114
