--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20968,6 +20968,7 @@ server=/chwang.com/114.114.114.114
 server=/chwlsq.com/114.114.114.114
 server=/chxchips.com/114.114.114.114
 server=/chxent.com/114.114.114.114
+server=/chxin-oil.com/114.114.114.114
 server=/chxumov.com/114.114.114.114
 server=/chxyq.com/114.114.114.114
 server=/chyfh.com/114.114.114.114
