--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43551,6 +43551,7 @@ server=/hszyy8.com/114.114.114.114
 server=/hszzsyzx.net/114.114.114.114
 server=/hszzzx.net/114.114.114.114
 server=/ht-cao.com/114.114.114.114
+server=/ht-chem.com/114.114.114.114
 server=/ht-rc.com/114.114.114.114
 server=/ht-saae.com/114.114.114.114
 server=/ht-tech.com/114.114.114.114
