--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70364,6 +70364,7 @@ server=/qizhuyun.com/114.114.114.114
 server=/qizi.cc/114.114.114.114
 server=/qizuang.com/114.114.114.114
 server=/qizubang.com/114.114.114.114
+server=/qj-robot.com/114.114.114.114
 server=/qj023.com/114.114.114.114
 server=/qj175.com/114.114.114.114
 server=/qj26.com/114.114.114.114
