accelerated-domains: add zjkeling.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102529,6 +102529,7 @@ server=/zjkdl.com/114.114.114.114
 server=/zjkdqz.com/114.114.114.114
 server=/zjke.com/114.114.114.114
 server=/zjkelan.com/114.114.114.114
+server=/zjkeling.com/114.114.114.114
 server=/zjkgdcs.com/114.114.114.114
 server=/zjkgjj.com/114.114.114.114
 server=/zjkim.com/114.114.114.114
