--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102619,6 +102619,7 @@ server=/zjsfkj.com/114.114.114.114
 server=/zjsftc.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
 server=/zjshcl.com/114.114.114.114
+server=/zjshibao.com/114.114.114.114
 server=/zjshjkj.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
