--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32715,6 +32715,7 @@ server=/fudian-bank.com/114.114.114.114
 server=/fudongdong.com/114.114.114.114
 server=/fuduxuexiao.com/114.114.114.114
 server=/fuedf.org/114.114.114.114
+server=/fuelcellchina.com/114.114.114.114
 server=/fufeng-group.com/114.114.114.114
 server=/fufuok.com/114.114.114.114
 server=/fugary.com/114.114.114.114
