--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28240,6 +28240,7 @@ server=/dvsadive.com/114.114.114.114
 server=/dvvvs.com/114.114.114.114
 server=/dw-microbiology.com/114.114.114.114
 server=/dw4.co/114.114.114.114
+server=/dwbxg.com/114.114.114.114
 server=/dwdds.com/114.114.114.114
 server=/dwgbj.com/114.114.114.114
 server=/dwgszc.com/114.114.114.114
