accelerated-domains: add aokang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11477,6 +11477,7 @@ server=/aojiyouxue.com/114.114.114.114
 server=/aojiyuke.com/114.114.114.114
 server=/aojoo.com/114.114.114.114
 server=/aoju.net/114.114.114.114
+server=/aokang.com/114.114.114.114
 server=/aokangsports.com/114.114.114.114
 server=/aokwx.com/114.114.114.114
 server=/aolai.com/114.114.114.114
