accelerated-domains: add julanggroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51933,6 +51933,7 @@ server=/jukichina.com/114.114.114.114
 server=/jukuu.com/114.114.114.114
 server=/julaibao.com/114.114.114.114
 server=/julang88.com/114.114.114.114
+server=/julanggroup.com/114.114.114.114
 server=/julanhp.com/114.114.114.114
 server=/julanling.com/114.114.114.114
 server=/julecn.com/114.114.114.114
