--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99868,6 +99868,7 @@ server=/zaihuangshi.com/114.114.114.114
 server=/zaijia.com/114.114.114.114
 server=/zaijiamaicai.com/114.114.114.114
 server=/zaijiawan.com/114.114.114.114
+server=/zailingtech.com/114.114.114.114
 server=/zailouxia.com/114.114.114.114
 server=/zaiminglvsuo.com/114.114.114.114
 server=/zainanjing365.com/114.114.114.114
