accelerated-domains: add zjbdfood.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102389,6 +102389,7 @@ server=/zjaqxy.com/114.114.114.114
 server=/zjautoparts.com/114.114.114.114
 server=/zjbaixiang.com/114.114.114.114
 server=/zjbanger.com/114.114.114.114
+server=/zjbdfood.com/114.114.114.114
 server=/zjbdt.com/114.114.114.114
 server=/zjbeacon.com/114.114.114.114
 server=/zjbelong.com/114.114.114.114
