--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102484,6 +102484,7 @@ server=/zjhualing.com/114.114.114.114
 server=/zjhuazhe.com/114.114.114.114
 server=/zjhui.net/114.114.114.114
 server=/zjhx520.com/114.114.114.114
+server=/zjhxgf.com/114.114.114.114
 server=/zjhyrcb.com/114.114.114.114
 server=/zjhzgy.com/114.114.114.114
 server=/zjhzjtjt.com/114.114.114.114
