--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102517,6 +102517,7 @@ server=/zjjlfny.com/114.114.114.114
 server=/zjjlvyou8264.com/114.114.114.114
 server=/zjjm.net/114.114.114.114
 server=/zjjmtl.com/114.114.114.114
+server=/zjjn.com/114.114.114.114
 server=/zjjr.com/114.114.114.114
 server=/zjjrh.com/114.114.114.114
 server=/zjjrtv.com/114.114.114.114
