--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53077,6 +53077,7 @@ server=/karrytech.com/114.114.114.114
 server=/kartlover.com/114.114.114.114
 server=/kascend.com/114.114.114.114
 server=/kashen.com/114.114.114.114
+server=/kashengauto.com/114.114.114.114
 server=/kasitesoft.com/114.114.114.114
 server=/kasscloud.com/114.114.114.114
 server=/kataliya.net/114.114.114.114
