--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20566,6 +20566,7 @@ server=/chinsun-door.com/114.114.114.114
 server=/chint.com/114.114.114.114
 server=/chint.net/114.114.114.114
 server=/chintautomation.com/114.114.114.114
+server=/chintcable.com/114.114.114.114
 server=/chinulture.com/114.114.114.114
 server=/chip37.com/114.114.114.114
 server=/chipcoo.com/114.114.114.114
