accelerated-domains: add cnjiali.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22249,6 +22249,7 @@ server=/cnjccrusher.com/114.114.114.114
 server=/cnjecc.com/114.114.114.114
 server=/cnjffb.com/114.114.114.114
 server=/cnjfsilk.com/114.114.114.114
+server=/cnjiali.com/114.114.114.114
 server=/cnjingchu.com/114.114.114.114
 server=/cnjiwang.com/114.114.114.114
 server=/cnjizhe.com/114.114.114.114
