--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23938,6 +23938,7 @@ server=/ctghro.com/114.114.114.114
 server=/ctgne.com/114.114.114.114
 server=/cthcdn.com/114.114.114.114
 server=/cthcdn.net/114.114.114.114
+server=/cthgjx.com/114.114.114.114
 server=/cthhmu.com/114.114.114.114
 server=/cthuwork.com/114.114.114.114
 server=/cthuwork.net/114.114.114.114
