accelerated-domains: add dunanac.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28032,6 +28032,7 @@ server=/dun.la/114.114.114.114
 server=/dun.tax/114.114.114.114
 server=/dun555.com/114.114.114.114
 server=/dunan.net/114.114.114.114
+server=/dunanac.com/114.114.114.114
 server=/dunankeji.com/114.114.114.114
 server=/dunbaigo.com/114.114.114.114
 server=/dungeon-server.com/114.114.114.114
