accelerated-domains: add jinfanda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49888,6 +49888,7 @@ server=/jinenrunze.com/114.114.114.114
 server=/jinergy.com/114.114.114.114
 server=/jinerkang.com/114.114.114.114
 server=/jinfan-keji.com/114.114.114.114
+server=/jinfanda.com/114.114.114.114
 server=/jinfangka.com/114.114.114.114
 server=/jinfapharma.com/114.114.114.114
 server=/jinfengcx.com/114.114.114.114
