accelerated-domains: add ruizhi-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73057,6 +73057,7 @@ server=/ruiying3d.com/114.114.114.114
 server=/ruiyingkeji.com/114.114.114.114
 server=/ruiyuanobserve.com/114.114.114.114
 server=/ruiyunit.com/114.114.114.114
+server=/ruizhi-group.com/114.114.114.114
 server=/ruizhipak.com/114.114.114.114
 server=/ruizib.com/114.114.114.114
 server=/ruizim.com/114.114.114.114
