accelerated-domains: add taifengfans.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80996,6 +80996,7 @@ server=/taidu.com/114.114.114.114
 server=/taiduhome.com/114.114.114.114
 server=/taiergroup.com/114.114.114.114
 server=/taierrobot.com/114.114.114.114
+server=/taifengfans.com/114.114.114.114
 server=/taifua.com/114.114.114.114
 server=/taig.com/114.114.114.114
 server=/taigaoxiao.com/114.114.114.114
