--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102705,6 +102705,7 @@ server=/zjxf119.com/114.114.114.114
 server=/zjxhbj.com/114.114.114.114
 server=/zjxhgd.com/114.114.114.114
 server=/zjxindu.com/114.114.114.114
+server=/zjxlmb.com/114.114.114.114
 server=/zjxlyp.com/114.114.114.114
 server=/zjxpp.com/114.114.114.114
 server=/zjxqyy.com/114.114.114.114
