accelerated-domains: add zjgzzc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102467,6 +102467,7 @@ server=/zjgwqxh.com/114.114.114.114
 server=/zjgwy.org/114.114.114.114
 server=/zjgwyw.org/114.114.114.114
 server=/zjgzcpa.com/114.114.114.114
+server=/zjgzzc.com/114.114.114.114
 server=/zjhaitian.com/114.114.114.114
 server=/zjhangyin.com/114.114.114.114
 server=/zjhbdlkj.com/114.114.114.114
