--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58290,6 +58290,7 @@ server=/lucode.net/114.114.114.114
 server=/luctonshanghai.com/114.114.114.114
 server=/lucy365.com/114.114.114.114
 server=/lucycat.xyz/114.114.114.114
+server=/ludaocn.com/114.114.114.114
 server=/ludaopei-bjyz.com/114.114.114.114
 server=/ludashi.com/114.114.114.114
 server=/ludashicdn.com/114.114.114.114
