accelerated-domains: add sxslhg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79993,6 +79993,7 @@ server=/sxsgs.com/114.114.114.114
 server=/sxsim.com/114.114.114.114
 server=/sxsimg.com/114.114.114.114
 server=/sxsjgy.com/114.114.114.114
+server=/sxslhg.com/114.114.114.114
 server=/sxslnews.com/114.114.114.114
 server=/sxsng.com/114.114.114.114
 server=/sxsoft.com/114.114.114.114
