--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102368,6 +102368,7 @@ server=/zizizaizai.com/114.114.114.114
 server=/zizizizizi.com/114.114.114.114
 server=/zizzs.com/114.114.114.114
 server=/zj-art.com/114.114.114.114
+server=/zj-gold.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
 server=/zj-huawei.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
