accelerated-domains: add zjgengu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102458,6 +102458,7 @@ server=/zjg-jcu.com/114.114.114.114
 server=/zjgas.com/114.114.114.114
 server=/zjgas.net/114.114.114.114
 server=/zjgcreative.com/114.114.114.114
+server=/zjgengu.com/114.114.114.114
 server=/zjgeyi.com/114.114.114.114
 server=/zjgf88.com/114.114.114.114
 server=/zjgiso.com/114.114.114.114
