--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102699,6 +102699,7 @@ server=/zjwcqp.com/114.114.114.114
 server=/zjwebapp.com/114.114.114.114
 server=/zjwentou.com/114.114.114.114
 server=/zjwhhly.com/114.114.114.114
+server=/zjwhyis.com/114.114.114.114
 server=/zjwiki.com/114.114.114.114
 server=/zjwit.net/114.114.114.114
 server=/zjwk.com/114.114.114.114
