accelerated-domains: add zjsszsjy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102655,6 +102655,7 @@ server=/zjskgr.com/114.114.114.114
 server=/zjskjt.com/114.114.114.114
 server=/zjsmhg.com/114.114.114.114
 server=/zjsms.com/114.114.114.114
+server=/zjsszsjy.com/114.114.114.114
 server=/zjstv.com/114.114.114.114
 server=/zjsuntek.com/114.114.114.114
 server=/zjsw.org/114.114.114.114
