accelerated-domains: add huifeng-zj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44298,6 +44298,7 @@ server=/huierp.com/114.114.114.114
 server=/huifachina.com/114.114.114.114
 server=/huifacms.com/114.114.114.114
 server=/huifayun.com/114.114.114.114
+server=/huifeng-zj.com/114.114.114.114
 server=/huifengxinxi.com/114.114.114.114
 server=/huifenqi.com/114.114.114.114
 server=/huifu.com/114.114.114.114
