--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92699,6 +92699,7 @@ server=/xingyusoft.net/114.114.114.114
 server=/xingyuyouxi.com/114.114.114.114
 server=/xingzai.pub/114.114.114.114
 server=/xingzhang.com/114.114.114.114
+server=/xingzhean.com/114.114.114.114
 server=/xingzhige.com/114.114.114.114
 server=/xingzhilan.com/114.114.114.114
 server=/xingzi-vision.com/114.114.114.114
