--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98303,6 +98303,7 @@ server=/ys991.com/114.114.114.114
 server=/ysaedesign.com/114.114.114.114
 server=/ysali.com/114.114.114.114
 server=/ysb76.com/114.114.114.114
+server=/ysbopet.com/114.114.114.114
 server=/ysbz168.com/114.114.114.114
 server=/yscase.com/114.114.114.114
 server=/ysch.cc/114.114.114.114
