--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102759,6 +102759,7 @@ server=/zjzsa.com/114.114.114.114
 server=/zjzsxb.com/114.114.114.114
 server=/zjzwlab.com/114.114.114.114
 server=/zjzy.com/114.114.114.114
+server=/zjzybiotech.com/114.114.114.114
 server=/zjzydns.com/114.114.114.114
 server=/zjzyxs.com/114.114.114.114
 server=/zk0771.com/114.114.114.114
