--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103408,6 +103408,7 @@ server=/zsyyart.com/114.114.114.114
 server=/zszq.com/114.114.114.114
 server=/zszqw.com/114.114.114.114
 server=/zszxsz.com/114.114.114.114
+server=/zszyss.com/114.114.114.114
 server=/zt-express.com/114.114.114.114
 server=/zt-info.com/114.114.114.114
 server=/zt-job.com/114.114.114.114
