accelerated-domains: add jiecangtubemotors.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49640,6 +49640,7 @@ server=/jieanjiaotong.com/114.114.114.114
 server=/jiebai.com/114.114.114.114
 server=/jiebaodz.com/114.114.114.114
 server=/jiebide.xin/114.114.114.114
+server=/jiecangtubemotors.com/114.114.114.114
 server=/jiecao.com/114.114.114.114
 server=/jiechengcehui.com/114.114.114.114
 server=/jiechengcloud.com/114.114.114.114
