--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12665,6 +12665,7 @@ server=/azp315.com/114.114.114.114
 server=/azpdl.com/114.114.114.114
 server=/azpdl.net/114.114.114.114
 server=/azsjhf.com/114.114.114.114
+server=/azureflying.com/114.114.114.114
 server=/azuremigrate.download.prss.microsoft.com/114.114.114.114
 server=/azuremigratetest.download.prss.microsoft.com/114.114.114.114
 server=/azurestackhub.download.prss.microsoft.com/114.114.114.114
