accelerated-domains: add zcpc.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100130,6 +100130,7 @@ server=/zcomc.com/114.114.114.114
 server=/zcoming.com/114.114.114.114
 server=/zcooler.com/114.114.114.114
 server=/zcosz.com/114.114.114.114
+server=/zcpc.net/114.114.114.114
 server=/zcpm.net/114.114.114.114
 server=/zcpzj.com/114.114.114.114
 server=/zcqh.com/114.114.114.114
