--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102527,6 +102527,7 @@ server=/zjipai.com/114.114.114.114
 server=/zjipc.com/114.114.114.114
 server=/zjitc.net/114.114.114.114
 server=/zjj-holiday.com/114.114.114.114
+server=/zjjcbdt.com/114.114.114.114
 server=/zjjd.org/114.114.114.114
 server=/zjjfpharm.com/114.114.114.114
 server=/zjjgcyz.com/114.114.114.114
