accelerated-domains: add zjts.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102691,6 +102691,7 @@ server=/zjtntd.com/114.114.114.114
 server=/zjtobacco.com/114.114.114.114
 server=/zjtongde.com/114.114.114.114
 server=/zjtree.com/114.114.114.114
+server=/zjts.com/114.114.114.114
 server=/zjtxedu.org/114.114.114.114
 server=/zjtzcx.com/114.114.114.114
 server=/zjtzwater.com/114.114.114.114
