accelerated-domains: add yz-machinery.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99699,6 +99699,7 @@ server=/yyzy-play.vip/114.114.114.114
 server=/yyzyytj.com/114.114.114.114
 server=/yyzzsem.com/114.114.114.114
 server=/yz-iot.com/114.114.114.114
+server=/yz-machinery.com/114.114.114.114
 server=/yz-proton.com/114.114.114.114
 server=/yz-show.com/114.114.114.114
 server=/yz-xd.com/114.114.114.114
