--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100871,6 +100871,7 @@ server=/zhaodanji.com/114.114.114.114
 server=/zhaodaojia.com/114.114.114.114
 server=/zhaodedao.xyz/114.114.114.114
 server=/zhaodeyl.com/114.114.114.114
+server=/zhaodigroup.com/114.114.114.114
 server=/zhaodll.com/114.114.114.114
 server=/zhaofangbang.net/114.114.114.114
 server=/zhaogang.com/114.114.114.114
