--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102640,6 +102640,7 @@ server=/zjrongli.com/114.114.114.114
 server=/zjrq.com/114.114.114.114
 server=/zjrtv.vip/114.114.114.114
 server=/zjrugao.com/114.114.114.114
+server=/zjrunqiang.com/114.114.114.114
 server=/zjsairport.com/114.114.114.114
 server=/zjsaisi.com/114.114.114.114
 server=/zjsanji.com/114.114.114.114
