accelerated-domains: add minli.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61278,6 +61278,7 @@ server=/minixiazai.com/114.114.114.114
 server=/miniyounger.com/114.114.114.114
 server=/minking.cc/114.114.114.114
 server=/minleai.com/114.114.114.114
+server=/minli.com/114.114.114.114
 server=/minlida.com/114.114.114.114
 server=/minor-tech.com/114.114.114.114
 server=/minovapharma.com/114.114.114.114
