--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20567,6 +20567,7 @@ server=/chinsun-door.com/114.114.114.114
 server=/chint.com/114.114.114.114
 server=/chint.net/114.114.114.114
 server=/chintautomation.com/114.114.114.114
+server=/chintautoparts.com/114.114.114.114
 server=/chintcable.com/114.114.114.114
 server=/chinulture.com/114.114.114.114
 server=/chip37.com/114.114.114.114
