accelerated-domains: add fescoadeccozhejiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31577,6 +31577,7 @@ server=/ferqwo.sbs/114.114.114.114
 server=/ferro-alloys.com/114.114.114.114
 server=/fersese.com/114.114.114.114
 server=/fescoadecco.com/114.114.114.114
+server=/fescoadeccozhejiang.com/114.114.114.114
 server=/fescogroup.com/114.114.114.114
 server=/feso.tech/114.114.114.114
 server=/festaint.com/114.114.114.114
