accelerated-domains: add haersgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39464,6 +39464,7 @@ server=/hadewu.com/114.114.114.114
 server=/hadobi.com/114.114.114.114
 server=/hadsky.com/114.114.114.114
 server=/haers.com/114.114.114.114
+server=/haersgroup.com/114.114.114.114
 server=/hafei.com/114.114.114.114
 server=/haguan.com/114.114.114.114
 server=/haguworld.com/114.114.114.114
