--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49659,6 +49659,7 @@ server=/jiefuku.com/114.114.114.114
 server=/jiegames.com/114.114.114.114
 server=/jiegeng.com/114.114.114.114
 server=/jiegon.com/114.114.114.114
+server=/jiehua-chem.com/114.114.114.114
 server=/jiehun021.com/114.114.114.114
 server=/jiehun027.com/114.114.114.114
 server=/jiehunmishu.com/114.114.114.114
