--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79449,6 +79449,7 @@ server=/sunemc.com/114.114.114.114
 server=/suner.cc/114.114.114.114
 server=/sunera-cn.com/114.114.114.114
 server=/sunergyworks.com/114.114.114.114
+server=/sunfluxeq.com/114.114.114.114
 server=/sunfounder.cc/114.114.114.114
 server=/sunfront.com/114.114.114.114
 server=/sunft.com/114.114.114.114
