--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101002,6 +101002,7 @@ server=/zhejiangliming.com/114.114.114.114
 server=/zhejianglong.com/114.114.114.114
 server=/zhejiangmuseum.com/114.114.114.114
 server=/zhejiangqinghe.com/114.114.114.114
+server=/zhejiangseed.com/114.114.114.114
 server=/zhejing.tech/114.114.114.114
 server=/zhekangzc.com/114.114.114.114
 server=/zhekouniu.net/114.114.114.114
