accelerated-domains: add zjdtkg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102457,6 +102457,7 @@ server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
 server=/zjdkjs.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
+server=/zjdtkg.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
 server=/zjdydlc.com/114.114.114.114
 server=/zjdyjob.com/114.114.114.114
