accelerated-domains: add zjklfj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102578,6 +102578,7 @@ server=/zjkgdcs.com/114.114.114.114
 server=/zjkgjj.com/114.114.114.114
 server=/zjkim.com/114.114.114.114
 server=/zjkings.com/114.114.114.114
+server=/zjklfj.com/114.114.114.114
 server=/zjkmtgc.com/114.114.114.114
 server=/zjknews.com/114.114.114.114
 server=/zjkpet.com/114.114.114.114
