--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102480,6 +102480,7 @@ server=/zjgcreative.com/114.114.114.114
 server=/zjgengu.com/114.114.114.114
 server=/zjgeyi.com/114.114.114.114
 server=/zjgf88.com/114.114.114.114
+server=/zjgfjt.com/114.114.114.114
 server=/zjgiso.com/114.114.114.114
 server=/zjgj.com/114.114.114.114
 server=/zjgjj.com/114.114.114.114
