accelerated-domains: add zxgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103809,6 +103809,7 @@ server=/zxfw888.com/114.114.114.114
 server=/zxfwgj.com/114.114.114.114
 server=/zxgj56.com/114.114.114.114
 server=/zxgongshui.com/114.114.114.114
+server=/zxgroup.com/114.114.114.114
 server=/zxgroup.ltd/114.114.114.114
 server=/zxgzs.com/114.114.114.114
 server=/zxgzw.com/114.114.114.114
