--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30242,6 +30242,7 @@ server=/evergrande.com/114.114.114.114
 server=/evergrandeauto.com/114.114.114.114
 server=/evergrandeservice.com/114.114.114.114
 server=/evergreen-plastics.com/114.114.114.114
+server=/everichgroup.com/114.114.114.114
 server=/everisker.com/114.114.114.114
 server=/everknight.net/114.114.114.114
 server=/everlight-space.com/114.114.114.114
