accelerated-domains: add chintanneng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20566,6 +20566,7 @@ server=/chinsc.com/114.114.114.114
 server=/chinsun-door.com/114.114.114.114
 server=/chint.com/114.114.114.114
 server=/chint.net/114.114.114.114
+server=/chintanneng.com/114.114.114.114
 server=/chintautomation.com/114.114.114.114
 server=/chintautoparts.com/114.114.114.114
 server=/chintcable.com/114.114.114.114
