accelerated-domains: add kaishan-pv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52782,6 +52782,7 @@ server=/kairunjinshu.com/114.114.114.114
 server=/kaisacst.com/114.114.114.114
 server=/kaisagroup.com/114.114.114.114
 server=/kaisalong.com/114.114.114.114
+server=/kaishan-pv.com/114.114.114.114
 server=/kaishancomp.com/114.114.114.114
 server=/kaishangroup.com/114.114.114.114
 server=/kaishigo.com/114.114.114.114
