--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102663,6 +102663,7 @@ server=/zjsanji.com/114.114.114.114
 server=/zjsanma.com/114.114.114.114
 server=/zjsbigdata.com/114.114.114.114
 server=/zjscdb.com/114.114.114.114
+server=/zjsck.com/114.114.114.114
 server=/zjscs.com/114.114.114.114
 server=/zjsdbjt.com/114.114.114.114
 server=/zjsdjlkj.com/114.114.114.114
