--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102952,6 +102952,7 @@ server=/zmaxfilm.com/114.114.114.114
 server=/zmaxhotels.cc/114.114.114.114
 server=/zmbesta.com/114.114.114.114
 server=/zmbg.com/114.114.114.114
+server=/zmcchina.com/114.114.114.114
 server=/zmccx.com/114.114.114.114
 server=/zmclearing.com/114.114.114.114
 server=/zmctc.com/114.114.114.114
