accelerated-domains: add zjsuntex.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102687,6 +102687,7 @@ server=/zjsms.com/114.114.114.114
 server=/zjsszsjy.com/114.114.114.114
 server=/zjstv.com/114.114.114.114
 server=/zjsuntek.com/114.114.114.114
+server=/zjsuntex.com/114.114.114.114
 server=/zjsw.org/114.114.114.114
 server=/zjswxpx.com/114.114.114.114
 server=/zjsxkj.com/114.114.114.114
