accelerated-domains: add dalifa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24866,6 +24866,7 @@ server=/dalianxianting.com/114.114.114.114
 server=/daliaolaser.com/114.114.114.114
 server=/daliapp.net/114.114.114.114
 server=/dalidm.com/114.114.114.114
+server=/dalifa.com/114.114.114.114
 server=/daliha.com/114.114.114.114
 server=/dalipan.com/114.114.114.114
 server=/daliuren.vip/114.114.114.114
