accelerated-domains: add mangzhongbrand.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59581,6 +59581,7 @@ server=/mangtuhuyu.com/114.114.114.114
 server=/manguo42.com/114.114.114.114
 server=/mangxia.com/114.114.114.114
 server=/mangxuewang.com/114.114.114.114
+server=/mangzhongbrand.com/114.114.114.114
 server=/mangzitian.com/114.114.114.114
 server=/manhua1.com/114.114.114.114
 server=/manhua365.com/114.114.114.114
