accelerated-domains: add mcuzj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60038,6 +60038,7 @@ server=/mcue.cc/114.114.114.114
 server=/mcufan.com/114.114.114.114
 server=/mcuisp.com/114.114.114.114
 server=/mcusky.com/114.114.114.114
+server=/mcuzj.com/114.114.114.114
 server=/mcuzone.com/114.114.114.114
 server=/mcuzx.net/114.114.114.114
 server=/mcw99.com/114.114.114.114
