accelerated-domains: add sukean.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79375,6 +79375,7 @@ server=/sujia.cc/114.114.114.114
 server=/sujiao1668.com/114.114.114.114
 server=/sujw.com/114.114.114.114
 server=/sujx.net/114.114.114.114
+server=/sukean.com/114.114.114.114
 server=/sukeler.com/114.114.114.114
 server=/sukeyun.com/114.114.114.114
 server=/suki.club/114.114.114.114
