--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87849,6 +87849,7 @@ server=/wedoany.com/114.114.114.114
 server=/wedoctor.com/114.114.114.114
 server=/wedolook.com/114.114.114.114
 server=/wedooapp.com/114.114.114.114
+server=/wedumedical.com/114.114.114.114
 server=/weebei.com/114.114.114.114
 server=/weebia.com/114.114.114.114
 server=/weedong.com/114.114.114.114
