--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102465,6 +102465,7 @@ server=/zjdata.net/114.114.114.114
 server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
 server=/zjdkjs.com/114.114.114.114
+server=/zjdljc.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
 server=/zjdtkg.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
