--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102505,6 +102505,7 @@ server=/zjgwy.org/114.114.114.114
 server=/zjgwyw.org/114.114.114.114
 server=/zjgzcpa.com/114.114.114.114
 server=/zjgzzc.com/114.114.114.114
+server=/zjhac.com/114.114.114.114
 server=/zjhaitian.com/114.114.114.114
 server=/zjhangyin.com/114.114.114.114
 server=/zjhbdlkj.com/114.114.114.114
