accelerated-domains: add zjzajsjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102776,6 +102776,7 @@ server=/zjyq.cc/114.114.114.114
 server=/zjyyang.com/114.114.114.114
 server=/zjyygy.com/114.114.114.114
 server=/zjza.com/114.114.114.114
+server=/zjzajsjt.com/114.114.114.114
 server=/zjzcec.com/114.114.114.114
 server=/zjzcen.com/114.114.114.114
 server=/zjzdgj.com/114.114.114.114
