--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103331,6 +103331,7 @@ server=/zsaber.com/114.114.114.114
 server=/zsacg.com/114.114.114.114
 server=/zsafedns.net/114.114.114.114
 server=/zsaipay.com/114.114.114.114
+server=/zsamc.com/114.114.114.114
 server=/zsanxing.com/114.114.114.114
 server=/zsaxi.com/114.114.114.114
 server=/zsb2c.com/114.114.114.114
