--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102773,6 +102773,7 @@ server=/zjyiot.com/114.114.114.114
 server=/zjyiyuan.com/114.114.114.114
 server=/zjyoutian.com/114.114.114.114
 server=/zjyq.cc/114.114.114.114
+server=/zjystec.com/114.114.114.114
 server=/zjyyang.com/114.114.114.114
 server=/zjyygy.com/114.114.114.114
 server=/zjza.com/114.114.114.114
