accelerated-domains: add jinhuo.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50076,6 +50076,7 @@ server=/jinhuanluye.com/114.114.114.114
 server=/jinhuatv.com/114.114.114.114
 server=/jinhuawatch.com/114.114.114.114
 server=/jinhuazhe.com/114.114.114.114
+server=/jinhuo.net/114.114.114.114
 server=/jinhusns.com/114.114.114.114
 server=/jinianbi.com/114.114.114.114
 server=/jinianbishequ.com/114.114.114.114
