accelerated-domains: add bartymedical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13516,6 +13516,7 @@ server=/baronzhang.com/114.114.114.114
 server=/barreau.bj/114.114.114.114
 server=/barretlee.com/114.114.114.114
 server=/bartender.cc/114.114.114.114
+server=/bartymedical.com/114.114.114.114
 server=/basechem.org/114.114.114.114
 server=/basecity.com/114.114.114.114
 server=/based-edu.com/114.114.114.114
