--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19909,6 +19909,7 @@ server=/chinaccsi.com/114.114.114.114
 server=/chinacct.org/114.114.114.114
 server=/chinacdc.com/114.114.114.114
 server=/chinacdnb2b.com/114.114.114.114
+server=/chinacentrifuge.com/114.114.114.114
 server=/chinaceot.com/114.114.114.114
 server=/chinaceotv.com/114.114.114.114
 server=/chinacfi.net/114.114.114.114
