accelerated-domains: add juli-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51957,6 +51957,7 @@ server=/julanhp.com/114.114.114.114
 server=/julanling.com/114.114.114.114
 server=/julecn.com/114.114.114.114
 server=/julefun.com/114.114.114.114
+server=/juli-china.com/114.114.114.114
 server=/julialabarge.com/114.114.114.114
 server=/juliandianqi.com/114.114.114.114
 server=/juliang8.com/114.114.114.114
