--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67259,6 +67259,7 @@ server=/pathologycn.com/114.114.114.114
 server=/patsev.com/114.114.114.114
 server=/patsnapglobal.com/114.114.114.114
 server=/patv123.com/114.114.114.114
+server=/paul-corp.com/114.114.114.114
 server=/paul.pub/114.114.114.114
 server=/paulzzh.com/114.114.114.114
 server=/pauwaypower.com/114.114.114.114
