accelerated-domains: add yingguangroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96628,6 +96628,7 @@ server=/yingfangkeji.com/114.114.114.114
 server=/yingfeiyun.com/114.114.114.114
 server=/yingfeng.me/114.114.114.114
 server=/yingfs.com/114.114.114.114
+server=/yingguangroup.com/114.114.114.114
 server=/yingguantx.com/114.114.114.114
 server=/yinghaicar.com/114.114.114.114
 server=/yinghecloud.com/114.114.114.114
