accelerated-domains: add yjgf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97121,6 +97121,7 @@ server=/yjdzm.com/114.114.114.114
 server=/yjegf.com/114.114.114.114
 server=/yjfl.net/114.114.114.114
 server=/yjfs8.com/114.114.114.114
+server=/yjgf.com/114.114.114.114
 server=/yjgxcx.com/114.114.114.114
 server=/yjhbqx.com/114.114.114.114
 server=/yjhnt888.com/114.114.114.114
