accelerated-domains: add zjkszg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102602,6 +102602,7 @@ server=/zjkmtgc.com/114.114.114.114
 server=/zjknews.com/114.114.114.114
 server=/zjkpet.com/114.114.114.114
 server=/zjks.com/114.114.114.114
+server=/zjkszg.com/114.114.114.114
 server=/zjkwhjj.com/114.114.114.114
 server=/zjlcwg.com/114.114.114.114
 server=/zjldrcb.com/114.114.114.114
