accelerated-domains: add xiaolun.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92043,6 +92043,7 @@ server=/xiaolizhuli.com/114.114.114.114
 server=/xiaolongxy.com/114.114.114.114
 server=/xiaoluboke.com/114.114.114.114
 server=/xiaoluerhuo.com/114.114.114.114
+server=/xiaolun.net/114.114.114.114
 server=/xiaoluxuanfang.com/114.114.114.114
 server=/xiaoluyy.com/114.114.114.114
 server=/xiaolvji.com/114.114.114.114
