accelerated-domains: add efunchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29323,6 +29323,7 @@ server=/eftdlqi.com/114.114.114.114
 server=/eftime.com/114.114.114.114
 server=/efucms.com/114.114.114.114
 server=/efueloil.com/114.114.114.114
+server=/efunchina.com/114.114.114.114
 server=/efuncn.com/114.114.114.114
 server=/efunent.com/114.114.114.114
 server=/efunq.com/114.114.114.114
