--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32863,6 +32863,7 @@ server=/fupin832.com/114.114.114.114
 server=/fuqi368.com/114.114.114.114
 server=/furagon.com/114.114.114.114
 server=/furama-beihai.com/114.114.114.114
+server=/furderdriving.com/114.114.114.114
 server=/furenkeji.com/114.114.114.114
 server=/furniture-channel.com/114.114.114.114
 server=/furongedu.com/114.114.114.114
