accelerated-domains: add huanlingpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43932,6 +43932,7 @@ server=/huanlefish.com/114.114.114.114
 server=/huanleguang.com/114.114.114.114
 server=/huanletang.com/114.114.114.114
 server=/huanlewan.net/114.114.114.114
+server=/huanlingpharm.com/114.114.114.114
 server=/huanlingxiuxian.com/114.114.114.114
 server=/huanlj.com/114.114.114.114
 server=/huanmusic.com/114.114.114.114
