accelerated-domains: add suporpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79678,6 +79678,7 @@ server=/supoin.com/114.114.114.114
 server=/supool.com/114.114.114.114
 server=/supor.com/114.114.114.114
 server=/suporgroup.com/114.114.114.114
+server=/suporpharm.com/114.114.114.114
 server=/supplierlist.com/114.114.114.114
 server=/supplywater.com/114.114.114.114
 server=/support-cn.samsung.com/114.114.114.114
