--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98522,6 +98522,7 @@ server=/ytxfgs.com/114.114.114.114
 server=/ytxinhai.com/114.114.114.114
 server=/ytxinyan.com/114.114.114.114
 server=/ytxsc.com/114.114.114.114
+server=/ytyaoye.com/114.114.114.114
 server=/ytygame.com/114.114.114.114
 server=/ytzhihui.com/114.114.114.114
 server=/ytzq.com/114.114.114.114
