--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102462,6 +102462,7 @@ server=/zjchuanning.com/114.114.114.114
 server=/zjchuguo.com/114.114.114.114
 server=/zjcic.net/114.114.114.114
 server=/zjcio.org/114.114.114.114
+server=/zjcjjt.com/114.114.114.114
 server=/zjcjwh.com/114.114.114.114
 server=/zjckw.org/114.114.114.114
 server=/zjcloud.com/114.114.114.114
