--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49875,6 +49875,7 @@ server=/jincaicaiwu.com/114.114.114.114
 server=/jincaocw.com/114.114.114.114
 server=/jincdn.com/114.114.114.114
 server=/jincece.com/114.114.114.114
+server=/jinchanggps.com/114.114.114.114
 server=/jinchanqunale.com/114.114.114.114
 server=/jinchengdingjs.com/114.114.114.114
 server=/jinchengjt2011.com/114.114.114.114
