accelerated-domains: add innotek-co.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47288,6 +47288,7 @@ server=/innomd.org/114.114.114.114
 server=/innomddesign.com/114.114.114.114
 server=/innopro.cc/114.114.114.114
 server=/innotechx.com/114.114.114.114
+server=/innotek-co.com/114.114.114.114
 server=/innotron.com/114.114.114.114
 server=/innov-xsystem.com/114.114.114.114
 server=/innovagt.com/114.114.114.114
