accelerated-domains: add zjmaerfj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102629,6 +102629,7 @@ server=/zjlskd.com/114.114.114.114
 server=/zjlvjie.com/114.114.114.114
 server=/zjlxtx.com/114.114.114.114
 server=/zjlzgg.com/114.114.114.114
+server=/zjmaerfj.com/114.114.114.114
 server=/zjmaiou.com/114.114.114.114
 server=/zjmana.com/114.114.114.114
 server=/zjmax.com/114.114.114.114
