--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103133,6 +103133,7 @@ server=/zon100.com/114.114.114.114
 server=/zonafs.com/114.114.114.114
 server=/zonboapp.com/114.114.114.114
 server=/zonci.com/114.114.114.114
+server=/zone-king.com/114.114.114.114
 server=/zone139.com/114.114.114.114
 server=/zoneben.com/114.114.114.114
 server=/zoneidc.com/114.114.114.114
