accelerated-domains: add zgbaili.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100423,6 +100423,7 @@ server=/zg3721.com/114.114.114.114
 server=/zg388.com/114.114.114.114
 server=/zg58.com/114.114.114.114
 server=/zgaxr.com/114.114.114.114
+server=/zgbaili.cc/114.114.114.114
 server=/zgbenrun.com/114.114.114.114
 server=/zgbfw.com/114.114.114.114
 server=/zgbghdw.com/114.114.114.114
