accelerated-domains: add zjzjjx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102809,6 +102809,7 @@ server=/zjzhonglan.com/114.114.114.114
 server=/zjzhongtian.com/114.114.114.114
 server=/zjzj.org/114.114.114.114
 server=/zjzjhotel.com/114.114.114.114
+server=/zjzjjx.com/114.114.114.114
 server=/zjznk.com/114.114.114.114
 server=/zjzoneng.com/114.114.114.114
 server=/zjzs.net/114.114.114.114
