--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16827,6 +16827,7 @@ server=/bwin2808.com/114.114.114.114
 server=/bwjf.com/114.114.114.114
 server=/bwlc.net/114.114.114.114
 server=/bwmelon.com/114.114.114.114
+server=/bwokai.com/114.114.114.114
 server=/bwpoker.com/114.114.114.114
 server=/bwpx.com/114.114.114.114
 server=/bwsm.org/114.114.114.114
