accelerated-domains: add sifanggroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77030,6 +77030,7 @@ server=/sifalu.com/114.114.114.114
 server=/sifang.info/114.114.114.114
 server=/sifangbazhu.tech/114.114.114.114
 server=/sifangclub.com/114.114.114.114
+server=/sifanggroup.com/114.114.114.114
 server=/sifangoa.com/114.114.114.114
 server=/sifangvideo.com/114.114.114.114
 server=/sifary.com/114.114.114.114
