--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54509,6 +54509,7 @@ server=/kuanfutong.com/114.114.114.114
 server=/kuang-chi.com/114.114.114.114
 server=/kuang-chi.org/114.114.114.114
 server=/kuangchan.biz/114.114.114.114
+server=/kuangdi.com/114.114.114.114
 server=/kuangjijia.com/114.114.114.114
 server=/kuangjiwan.com/114.114.114.114
 server=/kuangming.com/114.114.114.114
