--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24682,6 +24682,7 @@ server=/dadighost.com/114.114.114.114
 server=/dadikid.net/114.114.114.114
 server=/dadiwang.com/114.114.114.114
 server=/dadiyimao.com/114.114.114.114
+server=/dadongwu.com/114.114.114.114
 server=/dadou.com/114.114.114.114
 server=/dadunet.com/114.114.114.114
 server=/daduoduo.com/114.114.114.114
