--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39365,6 +39365,7 @@ server=/h12.net/114.114.114.114
 server=/h128.com/114.114.114.114
 server=/h13.mobi/114.114.114.114
 server=/h1jx.com/114.114.114.114
+server=/h2-bank.com/114.114.114.114
 server=/h2fc.net/114.114.114.114
 server=/h2gl.com/114.114.114.114
 server=/h2o-china.com/114.114.114.114
