--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67662,6 +67662,7 @@ server=/pgksr.com/114.114.114.114
 server=/pgl-world.com/114.114.114.114
 server=/pglstatp-toutiao-b.com/114.114.114.114
 server=/pglstatp-toutiao.com/114.114.114.114
+server=/pgmcatalyst.com/114.114.114.114
 server=/pgq.win/114.114.114.114
 server=/pgqcw.com/114.114.114.114
 server=/pgqjz7733.com/114.114.114.114
