--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79625,6 +79625,7 @@ server=/supcname.com/114.114.114.114
 server=/supcompute.com/114.114.114.114
 server=/supcon.com/114.114.114.114
 server=/supconauto.com/114.114.114.114
+server=/supconit.com/114.114.114.114
 server=/supdri.com/114.114.114.114
 server=/supeeder.com/114.114.114.114
 server=/supei.com/114.114.114.114
