--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76053,6 +76053,7 @@ server=/shiningmidas.com/114.114.114.114
 server=/shiningnew.com/114.114.114.114
 server=/shinnytech.com/114.114.114.114
 server=/shinycg.com/114.114.114.114
+server=/shinye-ortho.com/114.114.114.114
 server=/shinyway.org/114.114.114.114
 server=/shiove.com/114.114.114.114
 server=/ship-gps.net/114.114.114.114
