--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79972,6 +79972,7 @@ server=/sxinrj.com/114.114.114.114
 server=/sxisa.org/114.114.114.114
 server=/sxjant.com/114.114.114.114
 server=/sxjcdyy.com/114.114.114.114
+server=/sxjd-cn.com/114.114.114.114
 server=/sxjdfreight.com/114.114.114.114
 server=/sxjdpm.com/114.114.114.114
 server=/sxjf8789.com/114.114.114.114
