--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89070,6 +89070,7 @@ server=/wilddream.net/114.114.114.114
 server=/wildgun.net/114.114.114.114
 server=/wildhorde.com/114.114.114.114
 server=/wildto.com/114.114.114.114
+server=/wildwindpharm.com/114.114.114.114
 server=/wilhb.com/114.114.114.114
 server=/willapps.com/114.114.114.114
 server=/willcdn.com/114.114.114.114
