accelerated-domains: add yuxicorrosion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99365,6 +99365,7 @@ server=/yuxiangwang0525.com/114.114.114.114
 server=/yuxianxing.com/114.114.114.114
 server=/yuxiaor.com/114.114.114.114
 server=/yuxiaotuo.com/114.114.114.114
+server=/yuxicorrosion.com/114.114.114.114
 server=/yuxinews.com/114.114.114.114
 server=/yuxingqiu.com/114.114.114.114
 server=/yuxinqinhang.com/114.114.114.114
