accelerated-domains: add zhengtaidianlan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101105,6 +101105,7 @@ server=/zhengqingsong.com/114.114.114.114
 server=/zhengquan.org/114.114.114.114
 server=/zhengqun123.com/114.114.114.114
 server=/zhengruioi.com/114.114.114.114
+server=/zhengtaidianlan.com/114.114.114.114
 server=/zhengte.net/114.114.114.114
 server=/zhengtongcloud.com/114.114.114.114
 server=/zhengtoon.com/114.114.114.114
