accelerated-domains: add zjmingzhuang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102655,6 +102655,7 @@ server=/zjmi-mall.com/114.114.114.114
 server=/zjminb.com/114.114.114.114
 server=/zjminghong.com/114.114.114.114
 server=/zjmingzhen.com/114.114.114.114
+server=/zjmingzhuang.com/114.114.114.114
 server=/zjminong.com/114.114.114.114
 server=/zjmkzx.com/114.114.114.114
 server=/zjmobile.com/114.114.114.114
