--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67595,6 +67595,7 @@ server=/pepresource.com/114.114.114.114
 server=/pepsidns.cc/114.114.114.114
 server=/pepsimeipai.com/114.114.114.114
 server=/pepsitmall.com/114.114.114.114
+server=/peptide-china.com/114.114.114.114
 server=/perfect-input.com/114.114.114.114
 server=/perfect99.com/114.114.114.114
 server=/perfectdiary.com/114.114.114.114
