accelerated-domains: add sjhuatong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77514,6 +77514,7 @@ server=/sjhgo.com/114.114.114.114
 server=/sjhl.cc/114.114.114.114
 server=/sjhoffice.com/114.114.114.114
 server=/sjhong.net/114.114.114.114
+server=/sjhuatong.com/114.114.114.114
 server=/sjhy.net/114.114.114.114
 server=/sjhykt.com/114.114.114.114
 server=/sjizx.com/114.114.114.114
