accelerated-domains: add tagold.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81009,6 +81009,7 @@ server=/tagcommander.com/114.114.114.114
 server=/tagen-pm.com/114.114.114.114
 server=/tagjjt.com/114.114.114.114
 server=/taglyst.com/114.114.114.114
+server=/tagold.net/114.114.114.114
 server=/tagoo.club/114.114.114.114
 server=/tagphi.net/114.114.114.114
 server=/taguage.com/114.114.114.114
