accelerated-domains: add tiannucoating.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82417,6 +82417,7 @@ server=/tiannbo.com/114.114.114.114
 server=/tiannengcarbon.com/114.114.114.114
 server=/tianning.xyz/114.114.114.114
 server=/tianninghr.com/114.114.114.114
+server=/tiannucoating.com/114.114.114.114
 server=/tiannv.com/114.114.114.114
 server=/tianpeng.com/114.114.114.114
 server=/tianqi.cc/114.114.114.114
