accelerated-domains: add zjchunhui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102482,6 +102482,7 @@ server=/zjcdn.com/114.114.114.114
 server=/zjchina.org/114.114.114.114
 server=/zjchuanning.com/114.114.114.114
 server=/zjchuguo.com/114.114.114.114
+server=/zjchunhui.com/114.114.114.114
 server=/zjcic.net/114.114.114.114
 server=/zjcio.org/114.114.114.114
 server=/zjcjjt.com/114.114.114.114
