--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102580,6 +102580,7 @@ server=/zjia8.com/114.114.114.114
 server=/zjian.net/114.114.114.114
 server=/zjib0.icu/114.114.114.114
 server=/zjibao.com/114.114.114.114
+server=/zjiec.com/114.114.114.114
 server=/zjiecode.com/114.114.114.114
 server=/zjiekai.com/114.114.114.114
 server=/zjiis.com/114.114.114.114
