--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12556,6 +12556,7 @@ server=/axiaoxin.com/114.114.114.114
 server=/axiba66.com/114.114.114.114
 server=/axic6906.com/114.114.114.114
 server=/axilelibrary.com/114.114.114.114
+server=/axilone-shunhua.com/114.114.114.114
 server=/axinsur.com/114.114.114.114
 server=/axisfluid.com/114.114.114.114
 server=/axjm-ex.com/114.114.114.114
