accelerated-domains: add addchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9379,6 +9379,7 @@ server=/adcdn.com/114.114.114.114
 server=/adcomeon.com/114.114.114.114
 server=/adcotechina.com/114.114.114.114
 server=/addaad.com/114.114.114.114
+server=/addchina.com/114.114.114.114
 server=/addgog.com/114.114.114.114
 server=/addimmar168.com/114.114.114.114
 server=/addinghome.com/114.114.114.114
