--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16365,6 +16365,7 @@ server=/brightdairy.com/114.114.114.114
 server=/brightdecolighting.com/114.114.114.114
 server=/brightfood.com/114.114.114.114
 server=/brightliao.com/114.114.114.114
+server=/brilliant-optoelectronics.com/114.114.114.114
 server=/brire.com/114.114.114.114
 server=/britesemi.com/114.114.114.114
 server=/brlinked.com/114.114.114.114
