accelerated-domains: add chinawulong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20473,6 +20473,7 @@ server=/chinawoodnet.com/114.114.114.114
 server=/chinawr.net/114.114.114.114
 server=/chinaws.net/114.114.114.114
 server=/chinawudang.com/114.114.114.114
+server=/chinawulong.com/114.114.114.114
 server=/chinawutong.com/114.114.114.114
 server=/chinawutong.net/114.114.114.114
 server=/chinawuyuan.com/114.114.114.114
