--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22061,6 +22061,7 @@ server=/cndatacom.com/114.114.114.114
 server=/cndbl.com/114.114.114.114
 server=/cndc-pl.com/114.114.114.114
 server=/cndds.com/114.114.114.114
+server=/cndelong.com/114.114.114.114
 server=/cndesign.com/114.114.114.114
 server=/cndezhong.com/114.114.114.114
 server=/cndfdt.com/114.114.114.114
