accelerated-domains: add damonroller.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24905,6 +24905,7 @@ server=/damingweb.com/114.114.114.114
 server=/damiw.com/114.114.114.114
 server=/damixs.biz/114.114.114.114
 server=/damndigital.com/114.114.114.114
+server=/damonroller.com/114.114.114.114
 server=/damostar.com/114.114.114.114
 server=/damotu.com/114.114.114.114
 server=/damoyang.com/114.114.114.114
