--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43880,6 +43880,7 @@ server=/huanbeiloan.com/114.114.114.114
 server=/huancaicp.com/114.114.114.114
 server=/huandie.com/114.114.114.114
 server=/huane.net/114.114.114.114
+server=/huanergy.com/114.114.114.114
 server=/huang-biao.com/114.114.114.114
 server=/huang-jerryc.com/114.114.114.114
 server=/huang-jiang.com/114.114.114.114
