accelerated-domains: add upc-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85424,6 +85424,7 @@ server=/upantool.com/114.114.114.114
 server=/upashance.com/114.114.114.114
 server=/upbiao.com/114.114.114.114
 server=/upbz.net/114.114.114.114
+server=/upc-cn.com/114.114.114.114
 server=/upcave.com/114.114.114.114
 server=/upcdn.net/114.114.114.114
 server=/upchina.com/114.114.114.114
