--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87017,6 +87017,7 @@ server=/waduanzi.com/114.114.114.114
 server=/waerfa.com/114.114.114.114
 server=/waf-website.com/114.114.114.114
 server=/waf.cdnetworks.com/114.114.114.114
+server=/wafatea.com/114.114.114.114
 server=/wafcn.com/114.114.114.114
 server=/wafsudun.com/114.114.114.114
 server=/wafunny.com/114.114.114.114
