accelerated-domains: add zjfengli.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102528,6 +102528,7 @@ server=/zjemec.com/114.114.114.114
 server=/zjevt.com/114.114.114.114
 server=/zjfcdn.com/114.114.114.114
 server=/zjfdc.net/114.114.114.114
+server=/zjfengli.com/114.114.114.114
 server=/zjfszhsw.com/114.114.114.114
 server=/zjft.com/114.114.114.114
 server=/zjfujiu.com/114.114.114.114
