--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102603,6 +102603,7 @@ server=/zjitc.net/114.114.114.114
 server=/zjj-holiday.com/114.114.114.114
 server=/zjjcbdt.com/114.114.114.114
 server=/zjjd.org/114.114.114.114
+server=/zjjfl.com/114.114.114.114
 server=/zjjfpharm.com/114.114.114.114
 server=/zjjgcyz.com/114.114.114.114
 server=/zjjgy.com/114.114.114.114
