--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102746,6 +102746,7 @@ server=/zjskjt.com/114.114.114.114
 server=/zjsmhg.com/114.114.114.114
 server=/zjsms.com/114.114.114.114
 server=/zjsszsjy.com/114.114.114.114
+server=/zjstar-electric.com/114.114.114.114
 server=/zjstv.com/114.114.114.114
 server=/zjsuntek.com/114.114.114.114
 server=/zjsuntex.com/114.114.114.114
