--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102764,6 +102764,7 @@ server=/zjtangshan.com/114.114.114.114
 server=/zjtbe.com/114.114.114.114
 server=/zjtcc.com/114.114.114.114
 server=/zjtcn.com/114.114.114.114
+server=/zjtcpm.com/114.114.114.114
 server=/zjtdw.com/114.114.114.114
 server=/zjtdyl.com/114.114.114.114
 server=/zjteam.com/114.114.114.114
