--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102447,6 +102447,7 @@ server=/zj-innolight.com/114.114.114.114
 server=/zj-jc.com/114.114.114.114
 server=/zj-jingyang.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
+server=/zj-syfj.com/114.114.114.114
 server=/zj-tiansong.com/114.114.114.114
 server=/zj-tuna.com/114.114.114.114
 server=/zj-yinlong.com/114.114.114.114
