--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61161,6 +61161,7 @@ server=/mindmm.com/114.114.114.114
 server=/mindpin.com/114.114.114.114
 server=/mindray.com/114.114.114.114
 server=/mindshow.fun/114.114.114.114
+server=/mindsun.com/114.114.114.114
 server=/mindway-sz.com/114.114.114.114
 server=/minebbs.com/114.114.114.114
 server=/minecdn.com/114.114.114.114
