accelerated-domains: add zjplan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102698,6 +102698,7 @@ server=/zjpcedu.com/114.114.114.114
 server=/zjpec.com/114.114.114.114
 server=/zjphrcb.com/114.114.114.114
 server=/zjpjmy.com/114.114.114.114
+server=/zjplan.com/114.114.114.114
 server=/zjpoetry.com/114.114.114.114
 server=/zjpost.com/114.114.114.114
 server=/zjptcc.com/114.114.114.114
