--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102853,6 +102853,7 @@ server=/zjznk.com/114.114.114.114
 server=/zjzoneng.com/114.114.114.114
 server=/zjzs.net/114.114.114.114
 server=/zjzsa.com/114.114.114.114
+server=/zjzsco.com/114.114.114.114
 server=/zjzsxb.com/114.114.114.114
 server=/zjzwlab.com/114.114.114.114
 server=/zjzy.com/114.114.114.114
