accelerated-domains: add hzxiaoya.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45556,6 +45556,7 @@ server=/hzxdship.com/114.114.114.114
 server=/hzxhgy.com/114.114.114.114
 server=/hzxiangbin.com/114.114.114.114
 server=/hzxiangshang.com/114.114.114.114
+server=/hzxiaoya.com/114.114.114.114
 server=/hzxinglong-ip.com/114.114.114.114
 server=/hzxinshen.com/114.114.114.114
 server=/hzxiyuege.com/114.114.114.114
