--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20657,6 +20657,7 @@ server=/chncopper.com/114.114.114.114
 server=/chncpa.org/114.114.114.114
 server=/chncwds.com/114.114.114.114
 server=/chndaqi.com/114.114.114.114
+server=/chndeli.com/114.114.114.114
 server=/chndesign.com/114.114.114.114
 server=/chndoi.com/114.114.114.114
 server=/chndoi.net/114.114.114.114
