--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24735,6 +24735,7 @@ server=/daheng-imavision.com/114.114.114.114
 server=/dahengit.com/114.114.114.114
 server=/dahengkongjiao.com/114.114.114.114
 server=/dahepiao.com/114.114.114.114
+server=/dahetest.com/114.114.114.114
 server=/dahongba.net/114.114.114.114
 server=/dahongtec.com/114.114.114.114
 server=/dahongtool.com/114.114.114.114
