--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35995,6 +35995,7 @@ server=/gtmly-lyilgily.com/114.114.114.114
 server=/gtmsh.com/114.114.114.114
 server=/gtn9.com/114.114.114.114
 server=/gtobal.com/114.114.114.114
+server=/gtphotonics.com/114.114.114.114
 server=/gtpromall.com/114.114.114.114
 server=/gtpso.com/114.114.114.114
 server=/gtqzg.com/114.114.114.114
