accelerated-domains: add hailiangbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39587,6 +39587,7 @@ server=/haikouwater.com/114.114.114.114
 server=/hailanggroup.com/114.114.114.114
 server=/haili-spitzer.com/114.114.114.114
 server=/hailiang.com/114.114.114.114
+server=/hailiangbio.com/114.114.114.114
 server=/hailiangedu.com/114.114.114.114
 server=/hailiangip.com/114.114.114.114
 server=/hailiangstock.com/114.114.114.114
