accelerated-domains: add haoxiangmachine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40261,6 +40261,7 @@ server=/haowuyunji.com/114.114.114.114
 server=/haowuyx.com/114.114.114.114
 server=/haoxg.net/114.114.114.114
 server=/haoxiake.com/114.114.114.114
+server=/haoxiangmachine.com/114.114.114.114
 server=/haoxiangyundong.com/114.114.114.114
 server=/haoxiaoguo.net/114.114.114.114
 server=/haoxingchen.com/114.114.114.114
