--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48562,6 +48562,7 @@ server=/jasonsemicon.com/114.114.114.114
 server=/jasonwatches.com/114.114.114.114
 server=/jasonzk.com/114.114.114.114
 server=/jasperxu.com/114.114.114.114
+server=/jasuoenergy.net/114.114.114.114
 server=/jatcochina.com/114.114.114.114
 server=/java-er.com/114.114.114.114
 server=/java1234.com/114.114.114.114
