accelerated-domains: add ludayq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58337,6 +58337,7 @@ server=/ludaopei-bjyz.com/114.114.114.114
 server=/ludashi.com/114.114.114.114
 server=/ludashicdn.com/114.114.114.114
 server=/ludashisafe.com/114.114.114.114
+server=/ludayq.com/114.114.114.114
 server=/ludedc.com/114.114.114.114
 server=/ludengtyn.com/114.114.114.114
 server=/ludeqi.com/114.114.114.114
