accelerated-domains: add xarptec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91078,6 +91078,7 @@ server=/xaprmc.com/114.114.114.114
 server=/xaqhgas.com/114.114.114.114
 server=/xarjfh.com/114.114.114.114
 server=/xarongdi.com/114.114.114.114
+server=/xarptec.com/114.114.114.114
 server=/xarxbio.com/114.114.114.114
 server=/xaseastar.com/114.114.114.114
 server=/xasff.com/114.114.114.114
