accelerated-domains: add zh-chem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100770,6 +100770,7 @@ server=/zgzy.net/114.114.114.114
 server=/zgzypyw.com/114.114.114.114
 server=/zgzzs.com/114.114.114.114
 server=/zgzzxx.com/114.114.114.114
+server=/zh-chem.com/114.114.114.114
 server=/zh-cjh.com/114.114.114.114
 server=/zh-hr.com/114.114.114.114
 server=/zh-itone.com/114.114.114.114
