--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102538,6 +102538,7 @@ server=/zjeagles.com/114.114.114.114
 server=/zjedps.com/114.114.114.114
 server=/zjedu.org/114.114.114.114
 server=/zjemec.com/114.114.114.114
+server=/zjeq.com/114.114.114.114
 server=/zjevt.com/114.114.114.114
 server=/zjfcdn.com/114.114.114.114
 server=/zjfdc.net/114.114.114.114
