--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102662,6 +102662,7 @@ server=/zjkpet.com/114.114.114.114
 server=/zjks.com/114.114.114.114
 server=/zjkszg.com/114.114.114.114
 server=/zjkwhjj.com/114.114.114.114
+server=/zjlca.com/114.114.114.114
 server=/zjlcwg.com/114.114.114.114
 server=/zjldrcb.com/114.114.114.114
 server=/zjledfbd.com/114.114.114.114
