accelerated-domains: add zjytxl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102846,6 +102846,7 @@ server=/zjyiyuan.com/114.114.114.114
 server=/zjyoutian.com/114.114.114.114
 server=/zjyq.cc/114.114.114.114
 server=/zjystec.com/114.114.114.114
+server=/zjytxl.com/114.114.114.114
 server=/zjyyang.com/114.114.114.114
 server=/zjyygy.com/114.114.114.114
 server=/zjza.com/114.114.114.114
