accelerated-domains: add zjzfjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102854,6 +102854,7 @@ server=/zjzajsjt.com/114.114.114.114
 server=/zjzcec.com/114.114.114.114
 server=/zjzcen.com/114.114.114.114
 server=/zjzdgj.com/114.114.114.114
+server=/zjzfjs.com/114.114.114.114
 server=/zjzg.com/114.114.114.114
 server=/zjzhengding.com/114.114.114.114
 server=/zjzhengxingyiyuan.com/114.114.114.114
