accelerated-domains: add zeetzj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100336,6 +100336,7 @@ server=/zeedao.com/114.114.114.114
 server=/zeekrlife.com/114.114.114.114
 server=/zeelis.com/114.114.114.114
 server=/zeesin.com/114.114.114.114
+server=/zeetzj.com/114.114.114.114
 server=/zeewain.com/114.114.114.114
 server=/zegarkirepliki.pl/114.114.114.114
 server=/zego.im/114.114.114.114
