--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102820,6 +102820,7 @@ server=/zjwqw.com/114.114.114.114
 server=/zjwsbidding.com/114.114.114.114
 server=/zjwttools.com/114.114.114.114
 server=/zjwxbank.com/114.114.114.114
+server=/zjwzbearing.com/114.114.114.114
 server=/zjxc.com/114.114.114.114
 server=/zjxdjz.com/114.114.114.114
 server=/zjxf119.com/114.114.114.114
