accelerated-domains: add dqyouqi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27698,6 +27698,7 @@ server=/dqxlun.xyz/114.114.114.114
 server=/dqxpz.com/114.114.114.114
 server=/dqycw.com/114.114.114.114
 server=/dqyfapiao.com/114.114.114.114
+server=/dqyouqi.com/114.114.114.114
 server=/dqyq.com/114.114.114.114
 server=/dqyxcy.com/114.114.114.114
 server=/dqzboy.com/114.114.114.114
