--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49198,6 +49198,7 @@ server=/jia360.com/114.114.114.114
 server=/jia400.com/114.114.114.114
 server=/jia86.cc/114.114.114.114
 server=/jiaads.com/114.114.114.114
+server=/jiaaohuanbao.com/114.114.114.114
 server=/jiaapps.com/114.114.114.114
 server=/jiaas.com/114.114.114.114
 server=/jiabaiwang.net/114.114.114.114
