--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63416,6 +63416,7 @@ server=/nbfeyy.com/114.114.114.114
 server=/nbfox.com/114.114.114.114
 server=/nbfzsj.com/114.114.114.114
 server=/nbgdjt.com/114.114.114.114
+server=/nbginnovations.com/114.114.114.114
 server=/nbgong.com/114.114.114.114
 server=/nbgroupllc.com/114.114.114.114
 server=/nbgy.com/114.114.114.114
