--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74962,6 +74962,7 @@ server=/sgqd.com/114.114.114.114
 server=/sgrbcm.com/114.114.114.114
 server=/sgshero.com/114.114.114.114
 server=/sgsic.com/114.114.114.114
+server=/sgsotools.com/114.114.114.114
 server=/sgst.prod.dl.playstation.net/114.114.114.114
 server=/sgsugou.com/114.114.114.114
 server=/sgsxw.com/114.114.114.114
