--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100543,6 +100543,7 @@ server=/zggldgj.com/114.114.114.114
 server=/zgglkx.com/114.114.114.114
 server=/zgglyun.com/114.114.114.114
 server=/zggqzp.com/114.114.114.114
+server=/zggroups.com/114.114.114.114
 server=/zggsfc.com/114.114.114.114
 server=/zggtxhw.com/114.114.114.114
 server=/zggua.com/114.114.114.114
