accelerated-domains: add zj-echo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102458,6 +102458,7 @@ server=/zizizaizai.com/114.114.114.114
 server=/zizizizizi.com/114.114.114.114
 server=/zizzs.com/114.114.114.114
 server=/zj-art.com/114.114.114.114
+server=/zj-echo.com/114.114.114.114
 server=/zj-gold.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
 server=/zj-huawei.com/114.114.114.114
