accelerated-domains: add chuandasolar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20793,6 +20793,7 @@ server=/chuan-s.com/114.114.114.114
 server=/chuanbojiang.com/114.114.114.114
 server=/chuanboyi.com/114.114.114.114
 server=/chuandaizc.com/114.114.114.114
+server=/chuandasolar.com/114.114.114.114
 server=/chuandong.com/114.114.114.114
 server=/chuang-fan.com/114.114.114.114
 server=/chuang-pin.com/114.114.114.114
