--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21981,6 +21981,7 @@ server=/cnbmltd.com/114.114.114.114
 server=/cnbnl.com/114.114.114.114
 server=/cnboat.com/114.114.114.114
 server=/cnbole.net/114.114.114.114
+server=/cnbonly.com/114.114.114.114
 server=/cnbooking.net/114.114.114.114
 server=/cnbooks.org/114.114.114.114
 server=/cnbp.net/114.114.114.114
