accelerated-domains: add chitic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20607,6 +20607,7 @@ server=/chisc.net/114.114.114.114
 server=/chiser.cc/114.114.114.114
 server=/chishine3d.com/114.114.114.114
 server=/chishoes.com/114.114.114.114
+server=/chitic.com/114.114.114.114
 server=/chitu.com/114.114.114.114
 server=/chitudexiaozhi.com/114.114.114.114
 server=/chitus.com/114.114.114.114
