--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22958,6 +22958,7 @@ server=/congyicn.com/114.114.114.114
 server=/congzao.com/114.114.114.114
 server=/congzhi.com/114.114.114.114
 server=/conhagroup.com/114.114.114.114
+server=/conlerpharm.com/114.114.114.114
 server=/connectsixmedia.com/114.114.114.114
 server=/connorsaviation.com/114.114.114.114
 server=/conodmedical.com/114.114.114.114
