--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30270,6 +30270,7 @@ server=/everisker.com/114.114.114.114
 server=/everknight.net/114.114.114.114
 server=/everlight-space.com/114.114.114.114
 server=/evernakedcake.com/114.114.114.114
+server=/everrobot.com/114.114.114.114
 server=/eversino.com/114.114.114.114
 server=/everstar.xyz/114.114.114.114
 server=/everstray.com/114.114.114.114
