accelerated-domains: add gmecn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35060,6 +35060,7 @@ server=/gmcchina.net/114.114.114.114
 server=/gmcinnov.com/114.114.114.114
 server=/gmcmonline.com/114.114.114.114
 server=/gmdun.com/114.114.114.114
+server=/gmecn.com/114.114.114.114
 server=/gmed.cc/114.114.114.114
 server=/gmedata.com/114.114.114.114
 server=/gmeditech.com/114.114.114.114
