--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41851,6 +41851,7 @@ server=/hiceon.com/114.114.114.114
 server=/hicheng.net/114.114.114.114
 server=/hichina.com/114.114.114.114
 server=/hichina.net/114.114.114.114
+server=/hichipharm.com/114.114.114.114
 server=/hichips.com/114.114.114.114
 server=/hicitech.com/114.114.114.114
 server=/hiclc.com/114.114.114.114
