accelerated-domains: add jacheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48513,6 +48513,7 @@ server=/jab88.com/114.114.114.114
 server=/jabizb.com/114.114.114.114
 server=/jabrehoo.com/114.114.114.114
 server=/jaccsvn.com/114.114.114.114
+server=/jacheng.com/114.114.114.114
 server=/jackeylea.com/114.114.114.114
 server=/jackon.me/114.114.114.114
 server=/jackxiang.com/114.114.114.114
