accelerated-domains: add wrtauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90029,6 +90029,7 @@ server=/wrsa.net/114.114.114.114
 server=/wrshg.com/114.114.114.114
 server=/wrsikq.xyz/114.114.114.114
 server=/wrsxy.com/114.114.114.114
+server=/wrtauto.com/114.114.114.114
 server=/wrtnode.cc/114.114.114.114
 server=/wrtnode.com/114.114.114.114
 server=/wrtsz.com/114.114.114.114
