--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102471,6 +102471,7 @@ server=/zj-art.com/114.114.114.114
 server=/zj-echo.com/114.114.114.114
 server=/zj-gold.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
+server=/zj-hc168.com/114.114.114.114
 server=/zj-huawei.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
