--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102522,6 +102522,7 @@ server=/zjcb.com/114.114.114.114
 server=/zjcbank.com/114.114.114.114
 server=/zjcbjy.com/114.114.114.114
 server=/zjcdn.com/114.114.114.114
+server=/zjcgmetal.com/114.114.114.114
 server=/zjchina.org/114.114.114.114
 server=/zjchuanning.com/114.114.114.114
 server=/zjchuguo.com/114.114.114.114
