accelerated-domains: add zjjinuo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102645,6 +102645,7 @@ server=/zjjgylydjc.com/114.114.114.114
 server=/zjjh.com/114.114.114.114
 server=/zjjiaoke.com/114.114.114.114
 server=/zjjiaozhou.com/114.114.114.114
+server=/zjjinuo.com/114.114.114.114
 server=/zjjizhi.com/114.114.114.114
 server=/zjjlfny.com/114.114.114.114
 server=/zjjlvyou8264.com/114.114.114.114
