--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102647,6 +102647,7 @@ server=/zjjiaoke.com/114.114.114.114
 server=/zjjiaozhou.com/114.114.114.114
 server=/zjjinuo.com/114.114.114.114
 server=/zjjizhi.com/114.114.114.114
+server=/zjjjtec.com/114.114.114.114
 server=/zjjlfny.com/114.114.114.114
 server=/zjjlvyou8264.com/114.114.114.114
 server=/zjjm.net/114.114.114.114
