--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102660,6 +102660,7 @@ server=/zjjsbank.com/114.114.114.114
 server=/zjjsit.com/114.114.114.114
 server=/zjjtgc.com/114.114.114.114
 server=/zjjubao.com/114.114.114.114
+server=/zjjudong.com/114.114.114.114
 server=/zjjxjt.com/114.114.114.114
 server=/zjjy.com/114.114.114.114
 server=/zjjytyt.com/114.114.114.114
