--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102762,6 +102762,7 @@ server=/zjsairport.com/114.114.114.114
 server=/zjsaisi.com/114.114.114.114
 server=/zjsanji.com/114.114.114.114
 server=/zjsanma.com/114.114.114.114
+server=/zjsaz.com/114.114.114.114
 server=/zjsbigdata.com/114.114.114.114
 server=/zjscdb.com/114.114.114.114
 server=/zjsck.com/114.114.114.114
