accelerated-domains: add zjxltz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102855,6 +102855,7 @@ server=/zjxhgd.com/114.114.114.114
 server=/zjxindu.com/114.114.114.114
 server=/zjxinyun.com/114.114.114.114
 server=/zjxlmb.com/114.114.114.114
+server=/zjxltz.com/114.114.114.114
 server=/zjxlyp.com/114.114.114.114
 server=/zjxpp.com/114.114.114.114
 server=/zjxqyy.com/114.114.114.114
