accelerated-domains: add zjaxzl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102505,6 +102505,7 @@ server=/zjaikang.com/114.114.114.114
 server=/zjairports.com/114.114.114.114
 server=/zjaqxy.com/114.114.114.114
 server=/zjautoparts.com/114.114.114.114
+server=/zjaxzl.com/114.114.114.114
 server=/zjbaixiang.com/114.114.114.114
 server=/zjbanger.com/114.114.114.114
 server=/zjbdfood.com/114.114.114.114
